# Rust-Staking_system

./: .gitignore  Cargo.toml  README.md
client/: deploy.json  devnet_output.json  package-lock.json  package.json  stake_client.ts  tsconfig.json  update_readme.ts
program/: Cargo.toml
program/src/: lib.rs
tests/: staking_tests.rs
