 [workspace]
 members = [
     "program",
 ]

 [workspace.package]
 edition = "2021"

 [workspace.dependencies]
 solana-program = "1.18.8"
 solana-sdk = "1.18.8"
 solana-program-test = "1.18.8"
 borsh = { version = "1.5.0", features = ["derive"] }
 thiserror = "1.0"
 spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
 spl-associated-token-account = { version = "3.0.2", features = ["no-entrypoint"] }
 bytemuck = { version = "1.14", features = ["derive"] }

 [workspace.metadata]
 resolver = "2"

